syntax = "proto3";

option go_package = "/rpc_base";

message User {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}

message Video {
    int64 id = 1;
    User author = 2;
    string play_url = 3;
    string cover_url = 4;
    int64 favorite_count = 5;
    int64 comment_count = 6;
    bool is_favorite = 7;
}

message Comment {
    int64 id = 1; 
    User user = 2;      
    string content = 3;    
    string create_date = 4; 
}

message Response {
    int32 status_code = 1;
    string status_msg = 2;
}
